cloudApp-v3.zip additions

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,5 @@
-<p>This is the about view.</p>
+<div ng-init="logo = true;" ng-include src="'views/header.html'"></div>
+<div class="container">
+  <h1>About us</h1>
+</div>
+
