--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,30 +1,32 @@
 <!-- Add your site or application content here -->
-<div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class="navbar-header" style="width: 25%;">
+<div ng-controller="HeaderCtrl">
+  <div class="header">
+    <div class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header" style="width: 25%;">
 
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
-        <a class="navbar-brand" href="#/" ng-show="logo == true">
-          <img class="img-responsive" src="images/logo.png" style="margin-top: -15px;">
-        </a>
-      </div>
+          <a class="navbar-brand" href="#/" ng-show="logo == true">
+            <img class="img-responsive" src="images/logo.png" style="margin-top: -15px;">
+          </a>
+        </div>
 
-      <div class="collapse navbar-collapse pull-right" id="js-navbar-collapse">
+        <div class="collapse navbar-collapse pull-right" id="js-navbar-collapse">
 
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#/">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#/">Contact</a></li>
-          <li><a ng-href="#/register">Register</a></li>
-          <li><a ng-href="#/dashboard">Dashboard</a></li>
-        </ul>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#/">Home</a></li>
+            <li><a ng-href="#/about">About</a></li>
+            <li><a ng-href="#/">Contact</a></li>
+            <li ng-show="!user"><a ng-href="#/login">Login</a></li>
+            <li ng-show="user"><a href ng-click="logout()">Logout</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
