--- a/app/views/header.html
+++ b/app/views/header.html
@@ -24,7 +24,7 @@
             <li><a ng-href="#/about">About</a></li>
             <li><a ng-href="#/">Contact</a></li>
             <li ng-show="!user"><a ng-href="#/login">Login</a></li>
-            <li ng-show="user"><a href ng-click="logout()">Logout</a></li>
+            <li ng-show="user"><a ng-href="#/dashboard">Dashboard</a></li>
           </ul>
         </div>
       </div>
