--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,8 +22,8 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+  border-bottom: 0px solid #e5e5e5;
+  margin-bottom: 0px;
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
@@ -55,13 +55,17 @@ body {
     padding: 14px 24px;
   }
 }
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
+/* Search */
+.search{
+  label{
+    font-size: 24px;
+  }
+  input{
+    font-size: 16px;
+    height: 44px;
+  }
+  button{
+    height:44px;
   }
 }
 
@@ -86,4 +90,43 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+/*
+ * Animation for sidebar container
+ */
+.slide-animate-container {
+  position:relative;
+  min-height:400px;
+  overflow:hidden;
+}
+
+.slide-animate {
+  padding:0px;
+}
+
+.slide-animate.ng-enter, .slide-animate.ng-leave {
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  display:block;
+  padding:10px;
+}
+
+.slide-animate.ng-enter {
+  top:-50px;
+}
+.slide-animate.ng-enter.ng-enter-active {
+  top:0;
+}
+
+.slide-animate.ng-leave {
+  top:0;
+}
+.slide-animate.ng-leave.ng-leave-active {
+  top:400px;
 }
