--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,7 +1,7 @@
 <div ng-init="logo = true;" ng-include src=" 'views/header.html' "></div>
 <div class="container">
   <h1>
-    About Us<br>
+    Contact Us<br>
     <small>Know us before your browse!!</small>
   </h1>
 </div>
