--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,7 +2,9 @@
 <div class="container">
   <h1>Login</h1>
   <p>
-    For authorized Users only. If you have account with Professional system, enter your credentials below. If not, use register button to create an account.
+    For authorized Users only. If you have account with Professional
+    system, enter your credentials below. If not, use register button to create
+    an account.
   </p>
   <p class="bg-danger" ng-show="err == true" style="padding: 1em;">
     Your userid or password is incorrect. Correct the information and try again.
@@ -11,17 +13,18 @@
     <div class="form-group">
       <label class="control-label">Email</label>
       <input class="form-control" type="email" ng-model="authInfo.email">
+      <span class="help-block">{{err.email}}</span>
     </div>
     <div class="form-group">
       <label class="control-label">password</label>
       <input class="form-control" type="password" ng-model="authInfo.password">
+      <span class="help-block">{{err.password}}</span>
     </div>
     <div style="width: 100%;">
       <a class="pull-left" ng-href="#/register">Register Account</a>
-      <button class="btn btn-primary pull-right" type="submit">
-        Login
-      </button>
+      <button class="btn btn-primary pull-right" type="submit">Login</button>
     </div>
   </form>
 </div>
+
 
