--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -50,7 +50,6 @@
   padding: 0;
   list-style: none;
 }
-
 .sidebar-nav li {
   text-indent: 20px;
   line-height: 40px;
@@ -59,7 +58,7 @@
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
-  color: #999999;
+  color: white;
 }
 
 .sidebar-nav li a:hover {
