--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,5 +1,5 @@
 <h3>
-  Dashboard
+  Projects
   <small>This is your dashboard. To change the content, choose link from the sidebar</small>
 </h3>
 <hr>
